Fix minimum font size for slider on mobile.

--- a/_g3/assets/_scss/components/_slide.scss
+++ b/_g3/assets/_scss/components/_slide.scss
@@ -65,7 +65,7 @@
 	&-text-caption {
 		margin-bottom: 0;
 		font-size:clamp(12px,2dvw,18px);
-		line-height: 1.6;
+		line-height: 1.5;
 	}
 	&-text-title + &-text-caption {
 		margin-top: 0.5rem;
